@@ -312,6 +312,24 @@ public class ResolveTest extends TestCase {
                 .exists());
     }
 
+    public void testResolveWithConflictManagerDefinedInModule() throws Exception {
+        // test case for IVY-465
+        // #M1;1.0 -> #M2;1.0
+        // #M2;1.0 -> {org1#mod1.2;1.1 org1#mod1.2;2.0} with
+        //            <conflict org="org1" module="mod1.2" rev="1.1,2.0" />
+        
+        ResolveReport report = ivy.resolve(
+            new File("test/repositories/1/IVY-465/M1/ivys/ivy-1.0.xml").toURL(),
+            getResolveOptions(new String[] {"*"}));
+        assertFalse(report.hasError());
+        
+        ArtifactDownloadReport[] adrs = 
+            report.getConfigurationReport("default").getDownloadedArtifactsReports();
+        assertEquals(2, adrs.length);
+        assertEquals("1.1", adrs[0].getArtifact().getId().getRevision());
+        assertEquals("2.0", adrs[1].getArtifact().getId().getRevision());
+    }
+
     public void testResolveRequiresDescriptor() throws Exception {
         // mod1.1 depends on mod1.2, mod1.2 has no ivy file
         Ivy ivy = new Ivy();
